# rust-gh-ci-test

./: Cargo.toml  README.md
.github/workflows/: rust.yml
